<resources>
    <string name="app_name">MusicBeansApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="title_activity_login_user">LoginUserActivity</string>
<<<<<<< HEAD
=======
    =======
>>>>>>> 6d5c33a96640e8d85175378405efa4880b7253be
    <string name="noticias">Noticias</string>
    <string name="bandas_favoritas">Bandas favoritas</string>
    <string name="lista_bandas">Lista de bandas</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="profile">Perfil</string>
    <string name="lista_clientes">Lista de clientes</string>
    <string name="account">Cuenta</string>
<<<<<<< HEAD
    <string name="navigation_drawer_open">Abrir cajón de navegación</string>
    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>s
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="username">Username</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
=======
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 6d5c33a96640e8d85175378405efa4880b7253be

</resources>
